# AI-Summit-Biasbusters

./: README.md  index.tsx  package-lock.json
backend/: backend.py  llm.py  pyproject.toml  redis.py  stt.py  stt_2.py  websocket.py  ws_back.py  ws_stt.py
backend/first-aid-prompt/: functions.json  guide.txt  user-example.txt
frontend/: app.json  package-lock.json  package.json
frontend/app/: index.tsx
frontend/assets/: audios.json
